@@ -13,6 +13,7 @@
 - Fixed bug in dialog Internal Piece Path. Value from the field After rewrited data in the field Before.
 - Tab Pins moved to be second in the list after tab Paths. 
 - Added tooltip for tab Passmark. Explained meaning of check box "Show the second passmark on seam line". 
+- [#696] Wrong grainline position on layout.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
